plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.1'
	id 'io.spring.dependency-management' version '1.1.5'
}

group = 'umc'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	runtimeOnly 'com.mysql:mysql-connector-j'

	// tests
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	//	swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'

	// spring security
	implementation 'org.springframework.boot:spring-boot-starter-security'

	// jwt
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	// oauth2
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.security:spring-security-oauth2-client'

	// coolsms
	implementation 'net.nurigo:sdk:4.3.0'

	// redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	// redisson (동시성)
	implementation 'org.redisson:redisson:3.45.1'

	// mongoDB (채팅 이력 저장용)
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'

	// websocket (채팅 통신용)
	implementation 'org.springframework.boot:spring-boot-starter-websocket'

	// S3
	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

	// WebClient
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	// Netty
	implementation 'io.projectreactor.netty:reactor-netty:1.1.0'

	// Jackson (JSON 직렬화 형식 지정을 위해 등록)
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
	implementation 'javax.xml.bind:jaxb-api:2.3.1'
	implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.1'
}

tasks.named('test') {
	useJUnitPlatform()
}
